iperf-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf-client
  namespace: iperf
spec:
  selector:
    app: iperf-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
