iperf-client/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: iperf-client
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: iperf-client
    weight: 100
  wildcardPolicy: None
